--- a/app/views/letters/_form.html.erb
+++ b/app/views/letters/_form.html.erb
@@ -28,20 +28,20 @@
     <%= f.text_area :message %>
   </div>
   <div class="field">
-    <%= f.label :month  %>
-    <%= f.select :month, @month_range %>
+    <%= label_tag 'month:'  %>
+    <%= select_tag("month", options_for_select(@month_range,@month_range.size)) %>
   </div>
   <div class="field">
-    <%= f.label :day  %>
-    <%= f.select :day, @day_range %>
+    <%= label_tag 'day:'  %>
+    <%= select_tag("day", options_for_select(@day_range,@day_range.size)) %>
   </div>
   <div class="field">
-    <%= f.label :year  %>
-    <%= f.select :year, @year_range %>
+    <%= label_tag 'year:'  %>
+    <%= select_tag("year", options_for_select(@year_range,@year_range.size)) %>
   </div>
   <div class="field">
-    <%= f.label :time  %>
-    <%= f.select :time, @time_range %>
+    <%= label_tag 'time:'  %>
+    <%= select_tag("time", options_for_select(@time_range,@time_range.size)) %>
   </div>
   <div class="actions">
     <%= f.submit %>
