set up initial views

--- a/app/views/abouts/index.html.erb
+++ b/app/views/abouts/index.html.erb
@@ -1,2 +1,14 @@
-<h1>Abouts#index</h1>
-<p>Find me in app/views/abouts/index.html.erb</p>
+<h1>Bio</h1>
+<p>
+  Michelle is a licensed psychotherapist with over 10 years of experience in the field of
+  mental health. She earned her Bachelor’s in Public Health from Temple University and her 
+  Master’s in Counseling Psychology from Arcadia University. She has trained and practiced in 
+  various settings such as community-based mental health facilities, outpatient clinics, schools, 
+  and group private practices, and has worked with several populations including school-aged 
+  children, college students and adults. She is also a member of the American Counseling 
+  Association. Through her clinical experience, Michelle has developed a special interest in the 
+  emotional well-being of women and provides therapy to meet the unique needs of women with 
+  depression, anxiety, chronic stress and other mental health problems. In her spare time, she 
+  enjoys spending time with her a daughter or engaging in one of many of her favorite outdoor 
+  activities.
+</p>
