--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Homes#index</h1>
-<p>Find me in app/views/homes/index.html.erb</p>
+<div>
+<h1>“Make your own recovery the first priority in your life.”</h1>
+<h3>- Robin Norwood</h3>
+</div>
