--- a/app/views/therapys/index.html.erb
+++ b/app/views/therapys/index.html.erb
@@ -1,2 +1,32 @@
-<h1>Therapys#index</h1>
-<p>Find me in app/views/therapys/index.html.erb</p>
+<ul>
+  <li>
+    Women-Focused Therapy - Life experiences such as relationship changes, parenting,
+    reproductive transitions (pregnancy, postpartum, menopause), and issues of grief and loss can 
+    influence a woman’s vulnerability to emotional disturbances. Through utilizing healthy coping 
+    skills and stress management, women can begin overcoming these challenges and experience a 
+    life of emotional wellness.
+  </li>
+  <li>
+    General Therapy - In individual therapy, the focus is to resolve the issues that are related to 
+    your emotional stress and to help you establish or reestablish your life as a thriving, progressive 
+    process. During the counseling process, negative responses and coping patterns to life stressors 
+    are identified, explored, and replaced with nurturing ones that will help you better deal with 
+    life’s challenges and fulfill your goals.
+  </li>
+  <li>
+    Professional Development – Clinical supervision is provided to graduate students and post-
+    masters clinicians who seek to obtain their professional license (LPC) or practitioners who are 
+    in need of ongoing professional development. The goal is to help you grow as a professional 
+    through supporting the development of your individual therapeutic orientation, practicing style, 
+    and competence.
+  </li>
+  <li>
+    Investment - Sessions are held for 50 minutes. It is important that you arrive as scheduled to 
+    maximize your time. The cost of each session is $110. A sliding scale is available for individuals 
+    who might be experiencing financial difficulties.
+  </li>
+  <li>
+    Insurance coverage is not accepted at this time. Check with your insurance provider to find out 
+    about reimbursement options.
+  </li>
+</ul>
