further view mods

--- a/app/views/letters/new.html.erb
+++ b/app/views/letters/new.html.erb
@@ -1,5 +1,16 @@
 <h1>New letter</h1>
+<div>
+  <%= render 'form' %>
+</div>
 
-<%= render 'form' %>
 
 <%= link_to 'Back', letters_path %>
+<div>
+  <h4>Contact Info</h4>
+  <p>
+    6703 Germantown Avenue, Suite 200<br> 
+    Philadelphia, PA 19119<br> 
+    Phone: (215)-874-6177<br>
+    Fax:(215)-689-3502
+  </p>
+</div>
