--- a/app/views/letters/_form.html.erb
+++ b/app/views/letters/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@letter,:remote => true)) do |f| %>
+<%= form_for(@letter, :remote => true) do |f| %>
   <% if @letter.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@letter.errors.count, "error") %> prohibited this letter from being saved:</h2>
