--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,32 @@
 </head>
 <body>
 
-<%= yield %>
+<%= render 'layouts/navbar' %>
+
+<div class="container">
+
+  <div class='row'>
+
+      <% if flash[:notice] != nil %>
+        <div class='col-lg-12' id='notice_div' align='center'>
+          <h3 id="notice"><%= flash[:notice] %></h3>
+        </div>        
+      <% elsif flash[:alert] != nil %>
+        <div class='col-lg-12' id='alert_div' align='center'>
+          <h3 id="alert"><%= flash[:alert] %></h3>
+        </div>
+      <% end %>
+
+  </div>
+
+  <%= yield %>
+
+
+
+
+ 
+
+</div>
 
 </body>
 </html>
