--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -23,5 +23,13 @@
     </div>
 
   </div>
-
+  <div class='row' id='change_after_color'>
+    <div class='col-lg-4'></div>
+    <div class='col-lg-4' id='purple_top_div'>
+      <div align='center'>
+        <span id='welcomes_name'><em>Michelle Keyes, LPC</em></span>
+      </div>
+    </div>
+    <div class='col-lg-4'></div>
+  </div>
 </nav>
