--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,4 +1,84 @@
-<div>
-<h1>“Make your own recovery the first priority in your life.”</h1>
-<h3>- Robin Norwood</h3>
+<div class='row' id='margin15'>
+  <div class='col-lg-12'>
+    <div align='center'>
+      <span id='welcomes_name'><em>Michelle Keyes, LPC</em></span>
+    </div>
+  </div>
+</div>
+
+<div class='row'>
+    <div class='col-lg-3' align='center'>
+    </div>
+    <div class='col-lg-6' align='center' id='pic_holder'>
+      <%= image_tag 'bestlotus.png', :id => 'homes_pic' %>
+    </div>
+    <div class='col-lg-3' align='center'>
+    </div>
+</div>
+
+<div class='row'>
+  <div class='col-lg-3' align='center'>
+  </div>
+  <div class='col-lg-6' align='center'>
+    <h1 id='quote'>“Make your own recovery the first priority in your life.”</h1>
+    <h3>- Robin Norwood</h3>  
+  </div>
+  <div class='col-lg-3' align='center'>
+  </div>
+</div>
+
+
+<div class="btn-group btn-group-justified" id='margin60'>
+  <div class="btn-group">
+    <%= link_to(abouts_path) do %>
+      <button type="button" class="btn btn-default">
+        <span class='footer_text_color'>About Me</span>
+        <br>
+        <%= image_tag 'about.png', :id => 'about_icon' %>
+      </button>
+    <% end %>
+  </div>
+  <div class="btn-group">
+    <%= link_to(new_letter_path) do %>
+      <button type="button" class="btn btn-default">
+        <span class='footer_text_color'>Contact</span>
+        <br>
+        <%= image_tag 'letter.png', :id => 'contact_icon' %>
+      </button>
+    <% end %>
+  </div>
+  <div class="btn-group">
+    <%= link_to(therapys_path) do %>
+      <button type="button" class="btn btn-default">
+        <span class='footer_text_color'>Therapy</span>
+        <br>
+        <%= image_tag 'therapy.png', :id => 'therapy_icon' %>
+      </button>
+    <% end %>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="container text-center">
+  <div class="row">
+
+    <div class="row">
+        <div class="col-lg-12">
+            <ul class="nav nav-pills nav-justified">
+                <li><a href="/">© 2013 Company Name.</a></li>
+                <li><a href="#">Terms of Service</a></li>
+                <li><a href="#">Privacy</a></li>
+            </ul>
+        </div>
+    </div>
 </div>
