--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,7 +1,7 @@
 <div class='row' id='margin15'>
   <div class='col-lg-12'>
     <div align='center'>
-      <span id='welcomes_name'><em>Michelle Keyes, LPC</em></span>
+      <span id='welcomes_name'>Michelle Keyes, LPC</span>
     </div>
   </div>
 </div>
@@ -28,13 +28,13 @@
 </div>
 
 
-<div class="btn-group btn-group-justified" id='margin60'>
+<div class="btn-group btn-group-justified" >
   <div class="btn-group">
-    <%= link_to(abouts_path) do %>
+    <%= link_to(therapys_path) do %>
       <button type="button" class="btn btn-default">
-        <span class='footer_text_color'>About Me</span>
+        <span class='footer_text_color'>Therapy</span>
         <br>
-        <%= image_tag 'about.png', :id => 'about_icon' %>
+        <%= image_tag 'therapy.png', :id => 'therapy_icon' %>
       </button>
     <% end %>
   </div>
@@ -48,11 +48,11 @@
     <% end %>
   </div>
   <div class="btn-group">
-    <%= link_to(therapys_path) do %>
+    <%= link_to(abouts_path) do %>
       <button type="button" class="btn btn-default">
-        <span class='footer_text_color'>Therapy</span>
+        <span class='footer_text_color'>About Me</span>
         <br>
-        <%= image_tag 'therapy.png', :id => 'therapy_icon' %>
+        <%= image_tag 'about.png', :id => 'about_icon' %>
       </button>
     <% end %>
   </div>
@@ -66,19 +66,20 @@
 
 
 
-
-
-
-<div class="container text-center">
-  <div class="row">
-
+<!-- <footer class='footer'>
+  <div class="container text-center">
     <div class="row">
-        <div class="col-lg-12">
-            <ul class="nav nav-pills nav-justified">
-                <li><a href="/">© 2013 Company Name.</a></li>
-                <li><a href="#">Terms of Service</a></li>
-                <li><a href="#">Privacy</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
+
+      <div class="row">
+          <div class="col-lg-12">
+              <ul class="nav nav-pills nav-justified">
+                  <li><a href="/">© 2013 Company Name.</a></li>
+                  <li><a href="#">Terms of Service</a></li>
+                  <li><a href="#">Privacy</a></li>
+              </ul>
+          </div>
+      </div>
+  </div>
+</footer> -->
+
+
