--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,7 +1,7 @@
 <div class='row' id='margin15'>
   <div class='col-lg-12'>
     <div align='center'>
-      <span id='welcomes_name'>Michelle Keyes, LPC</span>
+      <p id='welcomes_name'>Michelle Keyes, LPC</p>
     </div>
   </div>
 </div>
@@ -20,8 +20,8 @@
   <div class='col-lg-3' align='center'>
   </div>
   <div class='col-lg-6' align='center'>
-    <h1 id='quote'>“Make your own recovery the first priority in your life.”</h1>
-    <h3>- Robin Norwood</h3>  
+    <p id='quote'><em>“Make your own recovery the first priority in your life.”</em></p>
+    <h4 id='quote_author'>- Robin Norwood</h4>  
   </div>
   <div class='col-lg-3' align='center'>
   </div>
@@ -29,15 +29,6 @@
 
 
 <div class="btn-group btn-group-justified" >
-  <div class="btn-group">
-    <%= link_to(therapys_path) do %>
-      <button type="button" class="btn btn-default">
-        <span class='footer_text_color'>Therapy</span>
-        <br>
-        <%= image_tag 'therapy.png', :id => 'therapy_icon' %>
-      </button>
-    <% end %>
-  </div>
   <div class="btn-group">
     <%= link_to(new_letter_path) do %>
       <button type="button" class="btn btn-default">
@@ -47,6 +38,15 @@
       </button>
     <% end %>
   </div>
+  <div class="btn-group">
+    <%= link_to(therapys_path) do %>
+      <button type="button" class="btn btn-default">
+        <span class='footer_text_color'>Therapy</span>
+        <br>
+        <%= image_tag 'therapy.png', :id => 'therapy_icon' %>
+      </button>
+    <% end %>
+  </div>  
   <div class="btn-group">
     <%= link_to(abouts_path) do %>
       <button type="button" class="btn btn-default">
