--- a/app/views/letters/new.html.erb
+++ b/app/views/letters/new.html.erb
@@ -1,10 +1,16 @@
-<h1>New letter</h1>
-<div>
+<div class='row'>
+  <div class='col-lg-3'></div>
+  <div class='col-lg-6' align='center'>
+    <div id='form_border'>
+      <h1>Contact Me</h1>
+    </div>  
+  </div>
+  <div class='col-lg-3'></div>
+</div>
+<div id='form_div'>
   <%= render 'form' %>
 </div>
 
-
-<%= link_to 'Back', letters_path %>
 <div>
   <h4>Contact Info</h4>
   <p>
